# agent-shell

./: .coverage  .dockerignore  .env.example  .gitignore  AGENT_BASH_CI_EXAMPLES.md  AUTH.md  BUILD_REPORT.md  CONTAINERIZATION.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_KNOWLEDGE_GRAPH.md  DEPLOYMENT_QUICK_REF.md  DOCKERFILE_OPTIMIZATION_GUIDE.md  DOCKER_OPTIMIZATIONS.md  Dockerfile  Dockerfile.mcp  Dockerfile.optimized  Dockerfile.web-backend  ENDPOINTS.md  ENHANCEMENT_SUMMARY.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  INTEGRATION_GUIDE.md  KNOWLEDGE_GRAPH_MCP_GUIDE.md  PRD.md  PROGRESS.md  QUICKSTART_KNOWLEDGE_GRAPH.md  QUICK_START.md  RALPH_QUICKSTART.md  README.md  agent-bash-ci-workflow.instructions.md  ci-fail-test.yml  ci-ready-review.skill  docker-compose.knowledge-graph.yml  docker-compose.yml  pyproject.toml  ralph.ps1  ralph.py  ralph.sh  (+1 more)
.Jules/: palette.md
.codex/: config.toml
.github/: copilot-instructions.md
.jules/: bolt.md  sentinel.md
Database/: Database.sqlproj  codebeamer_mock.json  parsed_requirements.json  requirements.csv
agent-shell-service/: AUTH.md  BUILD_REPORT.md  README.md
agent_shell_service_runtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: PENDING_TASKS.md
hooks/: after_memory_compact.json
infra/: github-app-external-ci-manifest.json  mcp_servers.json  runtime.json
memory/: journal.jsonl  summary.md
runtime/: ANALYSIS_TASK_A.md  agent_loop.py  api.py  api_auth.py  cli.py  config.py  context.py  external_ci.py  hook_plugins.py  hooks.py  knowledge_graph_plugin.py  llm.py  main.py  mcp_adapter.py  mcp_server.py  memory.py  middleware.py  plugin_base.py  queue_fs.py  receipts.py  safety_hooks.py  server.py  service.py  skill_discovery.py  subagents.py  tools.py  utils.py  validation.py  worker.py
schemas/: active_registry_state.schema.json  canary_result.schema.json  candidate_registry_bundle.schema.json  candidate_skills_bundle.schema.json  changelog.schema.json  dailybrief.schema.json  hook_call.schema.json  receipt.schema.json  rollback_token.schema.json  task.schema.json  tool_contract.schema.json
scripts/: artifact_pipeline.py  build_zipapp.py  mcp_codebeamer_server.py  migrate_runtime_storage.py  run_external_ci.ps1  self_heal.py  setup_workspace.ps1  setup_workspace.sh  start-knowledge-graph.ps1  start-knowledge-graph.sh  test-pipeline.sh  (+1 more)
skill/: RUNTIME.md  (+1 more)
(+1093 files in other folders)
