[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-shell-service-runtime"
version = "0.5.1"
description = "Filesystem-backed agent runtime with an inbound FastAPI service above the LLM layer"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "httpx>=0.27,<1",
  "PyJWT>=2.10,<3"
]

[project.scripts]
agent-shell = "runtime.cli:main"
agent-shell-api = "runtime.server:main"
agent-shell-external-ci = "runtime.external_ci:main"

[tool.setuptools]
packages = ["runtime"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=app/orchestration --cov-report=term-missing"
testpaths = ["tests"]
